--- a/hub/config_template.yaml
+++ b/hub/config_template.yaml
@@ -17,4 +17,4 @@ singleuser:
   lifecycleHooks:
     postStart:
       exec:
-        command: ["git clone https://github.com/dlab-berkeley/python-fundamentals.git"]
+        command: ["git", "clone", "REPO"]
