add tag configuration option

--- a/hub/config_template.yaml
+++ b/hub/config_template.yaml
@@ -5,7 +5,7 @@ proxy:
 singleuser:
   image:
     name: DOCKER_IMAGE
-    tag: latest
+    tag: TAG
   memory:
       limit: 1G
       guarantee: 1G
